pulizia test e md